refactor: makes pagination, links and data reusable
